Add note selection and trash undo
